fixed parallax on mobile

--- a/css/mainCss.scss
+++ b/css/mainCss.scss
@@ -268,18 +268,20 @@ $linkfont: Helvetica, Arial, san-serif;
     height: auto;
     display: inline-block;
     padding: 0px;
+    top:5px;
   }
   
   #slide10, #slide10mobile{
     background-size: contain;
     background-repeat: no-repeat;
     background-position:left top;
-    margin-top: -5px;
     height: 10%;
   }
 
         #slide10mobile{
     background-image: url("../img/homeregistrymobile.jpg");
+    background-position: 0px -5px;
+    margin: 0px;
     height: 30%;
   }
 
@@ -313,7 +315,7 @@ $linkfont: Helvetica, Arial, san-serif;
     background-image: url("../img/halftone.png");
     background-repeat: repeat;
     height:auto;
-    padding-bottom: 100px;
+    padding-bottom: 200px;
     
   }
   
@@ -321,7 +323,7 @@ $linkfont: Helvetica, Arial, san-serif;
     background-image: url("../img/halftone.png");
     background-repeat: repeat;
     height:auto;
-    padding-bottom: 100px;
+    padding-bottom: 200px;
   }
   
   #slide15{
@@ -618,11 +620,17 @@ $linkfont: Helvetica, Arial, san-serif;
     height: auto;
     }
     
-    #myCarousel{
-      width: 90%;
-      margin: auto;
-    }
+ #myCarousel{
+      width: 100%;
+      margin: 0;
+  }
     
+#container14{
+    height: auto;
+    padding: 0px;
+  }
+  
+
 .carousel-control.left, .carousel-control.right {
   background: none !important;
   outline: 0;
@@ -653,7 +661,7 @@ $linkfont: Helvetica, Arial, san-serif;
 }
 #container15{
     height: 100%;
-    padding: 0px;
+    padding-bottom: 200px;
     width: 90%
   }
   
